--- a/assets/style.css
+++ b/assets/style.css
@@ -121,7 +121,7 @@ h1 {
     cursor: pointer;
 }
 
-.container__contrasena {
+.container__contrasenia {
     width: 496px;
     height: 72px;
     border-radius: 16px;
