--- a/assets/style.css
+++ b/assets/style.css
@@ -68,6 +68,7 @@ h1 {
     margin: 12px 0;
     display: flex;
     flex-direction: column;
+    align-items: center;
     
 }
 
@@ -79,6 +80,8 @@ h1 {
 .container__campo {
     display: flex;
     align-items: center;  
+    align-content: center;
+    flex-direction: row;
     margin-bottom: 12px;
     margin: 30px;
     gap: 2rem;  
@@ -108,7 +111,7 @@ h1 {
     
 }
 
-.boton{
+.boton, .botonLimpiar{
     color: white;
     font-size: 1.5rem;
     border: none;
@@ -122,6 +125,8 @@ h1 {
 }
 
 .container__contrasenia {
+    display: flex;
+    align-content: flex-start;
     width: 496px;
     height: 72px;
     border-radius: 16px;
@@ -133,6 +138,20 @@ h1 {
     font-size: 24px;
     font-weight: 700;
     font-family: 'Inter', sans-serif;
+}
+
+.container__password, .container__borrar {
+    display: flex;
+    flex-direction: column;
+}
+
+.mensaje-fortaleza {
+    visibility: visible;
+    color: pink;
+    font-size: 1.5rem;
+    font-weight: 500;
+    min-height: 1.5rem;
+    text-align: center;
 }
 
 
