--- a/assets/style.css
+++ b/assets/style.css
@@ -77,7 +77,7 @@ h1 {
     display: block;
 }
 
-.container__campo {
+.container__campo__1, .container__campo__2 {
     display: flex;
     align-items: center;  
     align-content: center;
@@ -98,7 +98,7 @@ h1 {
 }
 
 .container__input {
-    width: 148px;
+    width: 130px;
     height: 72px;
     border-radius: 16px;
     background-color: #FFF;
@@ -111,6 +111,10 @@ h1 {
     
 }
 
+.boton {
+    width: 200px;
+}
+
 .boton, .botonLimpiar{
     color: white;
     font-size: 1.5rem;
@@ -118,15 +122,12 @@ h1 {
     background-color: #1875E8;
     padding: 1rem 1.5rem;
     border-radius: 16px;
-    width: 243px;
     height: 72px;
     box-shadow: 0px 0px 20px 0px rgba(24, 117, 232, 0.50);
     cursor: pointer;
 }
 
-.container__contrasenia {
-    display: flex;
-    align-content: flex-start;
+.container__contrasenia {   
     width: 496px;
     height: 72px;
     border-radius: 16px;
